[package]
name = "netcon"
authors = ["Björn Guth <b.guth@netcon-consulting.com>"]
description = "A collections of tools and helper functions developed for and by NetCon Unternehmensberatung GmbH"
readme = "README.md"
version = "0.1.2"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/netcon-consulting/netcon-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true

[dependencies]
log = { version = "^0.4", optional = true }

[features]
threadpool = ["log"]
